--- a/asansor/app/src/main/res/layout/activity_main.xml
+++ b/asansor/app/src/main/res/layout/activity_main.xml
@@ -4,31 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2c3e50"
+    android:background="@drawable/kapak"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:background="#34495e"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ALFALIN"
-            android:background="#34495e"
+            android:id="@+id/isim"
             android:textStyle="bold"
             android:textSize="16dp"
-            android:textColor="#fff"
+            android:textColor="#212121"
             android:padding="8dp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_below="@+id/isim"
+            android:layout_gravity="center"
+            android:background="#212121" />
 
 
 
     </LinearLayout>
     <LinearLayout
+        android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -38,12 +44,13 @@
         <Button
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="4dp"
             android:layout_weight="1"
-            android:background="#2980b9"
-            android:paddingBottom="10dp"
+            android:background="@drawable/mybutton"
+            android:paddingBottom="12dp"
             android:textStyle="bold"
-            android:textSize="15dp"
+            android:textSize="12dp"
+            android:textColor="#C0C0C0"
             android:padding="8dp"
             android:id="@+id/tahsilatYapButton"
             android:text="Tahsilat Yap" />
@@ -52,13 +59,14 @@
             android:id="@+id/arizaTanimlaButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="4dp"
             android:layout_weight="1"
-            android:background="#2980b9"
-            android:paddingBottom="10dp"
+            android:background="@drawable/mybutton"
+            android:paddingBottom="12dp"
             android:textStyle="bold"
+            android:textColor="#C0C0C0"
             android:padding="8dp"
-            android:textSize="15dp"
+            android:textSize="12dp"
             android:text="Arıza Tanımlama" />
 
 
@@ -67,32 +75,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:orientation="horizontal">
 
         <Button
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="4dp"
             android:layout_weight="1"
-            android:background="#2980b9"
-            android:paddingBottom="10dp"
+            android:background="@drawable/mybutton"
+            android:paddingBottom="12dp"
+            android:textColor="#C0C0C0"
             android:padding="8dp"
             android:textStyle="bold"
             android:id="@+id/yapilacakBakimlarButton"
-            android:textSize="15dp"
+            android:textSize="12dp"
             android:text="Yapılacak bakımlar" />
 
         <Button
             android:layout_width="0dp"
             android:padding="8dp"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_margin="4dp"
             android:layout_weight="1"
-            android:background="#2980b9"
-            android:paddingBottom="10dp"
+            android:background="@drawable/mybutton"
+            android:paddingBottom="12dp"
+            android:textColor="#C0C0C0"
             android:textStyle="bold"
             android:id="@+id/bekleyenArizalarButton"
-            android:textSize="15dp"
+            android:textSize="12dp"
             android:text="Bekleyen Arızalar" />
 
 
@@ -109,15 +120,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="8dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginLeft="100dp"
 
             android:gravity="center"
-            android:background="#ecf0f1"
-            android:paddingBottom="10dp"
+            android:background="@drawable/mybutton"
+            android:paddingBottom="12dp"
             android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="15dp"
+            android:textColor="#ecf0f1"
+            android:textSize="12dp"
             android:id="@+id/bakimButton"
             android:text="BAKIM"/>
 
@@ -127,15 +138,15 @@
             android:layout_gravity="center"
             android:padding="8dp"
             android:layout_marginTop="12dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginLeft="100dp"
 
             android:gravity="center"
-            android:background="#ecf0f1"
-            android:paddingBottom="10dp"
+            android:background="@drawable/mybutton"
+            android:paddingBottom="12dp"
             android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="15dp"
+            android:textColor="#ecf0f1"
+            android:textSize="12dp"
             android:id="@+id/arizaButton"
             android:text="ARIZA"/>
 
