--- a/asansor/app/src/main/res/layout/activity_bakim.xml
+++ b/asansor/app/src/main/res/layout/activity_bakim.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="12dp"
     tools:context=".Activities.BakimActivity"
     android:orientation="vertical">
     <TextView
@@ -38,6 +39,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/tarihBakim"
         android:hint="secilibakim: Tarih"
         android:layout_below="@id/binaadiBakim"
         android:textSize="20dp"/>
@@ -57,12 +59,11 @@
             android:hint="Yapılması Gereken İşlemler"/>
         <EditText
             android:id="@+id/YapilmaliEditText"
-            android:layout_width="match_parent"
+            android:layout_width="280dp"
             android:shadowColor="@color/colorPrimaryDark"
             android:background="#fff"
             android:textColor="@color/colorPrimaryDark"
-            android:layout_height="wrap_content"
-            android:hint="yapilmasıgerekenislemlerhint"
+            android:layout_height="40dp"
             android:textColorHint="@color/colorPrimaryDark"/>
 
             <TextView
@@ -72,12 +73,12 @@
                 android:hint="Tutar"/>
             <EditText
                 android:id="@+id/TutarEditText"
-                android:layout_width="match_parent"
+                android:layout_width="280dp"
                 android:shadowColor="@color/colorPrimaryDark"
                 android:background="#fff"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_height="wrap_content"
-                android:hint="Tutarhint"
+                android:hint="100.00"
                 android:textColorHint="@color/colorPrimaryDark"/>
 
             <TextView
@@ -87,7 +88,7 @@
                 android:hint="BinaYetkilisi"/>
             <EditText
                 android:id="@+id/BinaYetkilisiEditText"
-                android:layout_width="match_parent"
+                android:layout_width="280dp"
                 android:shadowColor="@color/colorPrimaryDark"
                 android:background="#fff"
                 android:textColor="@color/colorPrimaryDark"
@@ -102,12 +103,12 @@
                 android:hint="Açıklama"/>
             <EditText
                 android:id="@+id/AcıklamaEditText"
-                android:layout_width="match_parent"
+                android:layout_width="280dp"
                 android:shadowColor="@color/colorPrimaryDark"
                 android:background="#fff"
                 android:textColor="@color/colorPrimaryDark"
-                android:layout_height="wrap_content"
-                android:hint="Açıklama hint"
+                android:layout_height="40dp"
+                android:hint="..."
                 android:textColorHint="@color/colorPrimaryDark"/>
 
             <TextView
@@ -117,12 +118,12 @@
                 android:hint="Tel"/>
             <EditText
                 android:id="@+id/TelEditText"
-                android:layout_width="match_parent"
+                android:layout_width="280dp"
                 android:shadowColor="@color/colorPrimaryDark"
                 android:background="#fff"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_height="wrap_content"
-                android:hint="Tel hint"
+
                 android:textColorHint="@color/colorPrimaryDark"/>
 
             <TextView
@@ -132,12 +133,12 @@
                 android:hint="E-posta"/>
             <EditText
                 android:id="@+id/EpostaEditText"
-                android:layout_width="match_parent"
+                android:layout_width="280dp"
                 android:shadowColor="@color/colorPrimaryDark"
                 android:background="#fff"
                 android:textColor="@color/colorPrimaryDark"
                 android:layout_height="wrap_content"
-                android:hint="E-posta hint"
+
                 android:textColorHint="@color/colorPrimaryDark"/>
 
             <TextView
@@ -147,12 +148,12 @@
                 android:hint="Mesaj"/>
             <EditText
                 android:id="@+id/MesajEditText"
-                android:layout_width="match_parent"
+                android:layout_width="280dp"
                 android:shadowColor="@color/colorPrimaryDark"
                 android:background="#fff"
                 android:textColor="@color/colorPrimaryDark"
-                android:layout_height="wrap_content"
-                android:hint="Mesaj hint"
+                android:layout_height="40dp"
+                android:hint="Mesajınız"
                 android:textColorHint="@color/colorPrimaryDark"/>
 
 
@@ -166,7 +167,7 @@
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@drawable/ic_launcher_background"
+                android:background="@drawable/mybutton"
                 android:text="Onay"/>
 
 
