--- a/asansor/app/src/main/res/layout/activity_yapilacak_bakimlar.xml
+++ b/asansor/app/src/main/res/layout/activity_yapilacak_bakimlar.xml
@@ -25,6 +25,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/button_background"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:id="@+id/yapilacakBakimlarBugunButton"
@@ -33,6 +34,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/button_background"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:id="@+id/yapilacakBakimlarBuayButton"
@@ -41,6 +43,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_weight="1"
+            android:background="@drawable/button_background"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:id="@+id/yapilacakBakimlarTumuButton"
@@ -62,7 +65,6 @@
     <ListView
         android:layout_width="match_parent"
         android:id="@+id/yapilacakBakimlarListView"
-
         android:background="#00587A"
         android:layout_height="match_parent"></ListView>
 
