--- a/asansor/app/src/main/res/layout/tahsilat_yap_layout.xml
+++ b/asansor/app/src/main/res/layout/tahsilat_yap_layout.xml
@@ -10,49 +10,69 @@
     android:layout_height="wrap_content">
 
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_weight="1.1"
-        android:layout_height="100dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="84dp">
+        <ImageView
+            android:layout_marginTop="20dp"
+            android:layout_width="40dp"
+            android:layout_weight="1.1"
+            android:layout_height="40dp"
+            android:alpha=".75"
+            android:background="@drawable/rep"
+            android:id="@+id/TahsilatYapResim"/>
 
-        android:id="@+id/TahsilatYapResim"
-        />
+    </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_weight="3"
         android:orientation="vertical"
-        android:layout_margin="3dp"
-        android:layout_marginLeft="10dp"
+        android:layout_margin="4dp"
+        android:layout_marginLeft="12dp"
         android:layout_height="match_parent">
 
         <TextView
             android:layout_width="match_parent"
-            android:text="deneme"
+            android:text="baslik"
             android:textColor="#0F3057"
-            android:textSize="20dp"
+            android:textSize="16dp"
             android:layout_alignParentTop="true"
             android:layout_height="wrap_content"
             android:id="@+id/TahsilatYapBinaAdi"/>
         <TextView
             android:layout_width="match_parent"
-            android:text="deneme"
+            android:layout_marginTop="8dp"
+            android:text="binaadi"
             android:textColor="#0F3057"
-            android:textSize="20dp"
-
-            android:layout_above="@+id/TahsilatYapYoneticiAdi"
+            android:textSize="16dp"
+            android:layout_below="@+id/TahsilatYapBinaAdi"
             android:layout_height="wrap_content"
             android:id="@+id/TahsilatYapAsansorAdi"/>
+
         <TextView
             android:layout_width="match_parent"
-            android:text="deneme"
+            android:text="yetkili"
             android:textColor="#0F3057"
-            android:textSize="15dp"
-            android:layout_alignParentBottom="true"
+            android:textSize="12dp"
             android:gravity="right|bottom"
-
+            android:layout_below="@+id/YapilacakBakimlarbinaadi"
             android:layout_height="wrap_content"
             android:id="@+id/TahsilatYapYoneticiAdi"/>
-    </RelativeLayout>
+
+
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="74dp"
+            android:background="#34495e" />
+
+
+
+
+
+    </LinearLayout>
 
 </LinearLayout>
