--- a/asansor/app/src/main/res/layout/yapilacak_bakimlar_layout.xml
+++ b/asansor/app/src/main/res/layout/yapilacak_bakimlar_layout.xml
@@ -3,34 +3,39 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    android:padding="3dp"
-    android:layout_margin="3dp"
-    android:background="#EEEEEE"
+    android:padding="8dp"
+    android:layout_margin="8dp"
+    android:background="#fff"
     android:id="@+id/ilanLinearLayout"
     android:layout_height="wrap_content">
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="84dp">
+        <ImageView
+            android:layout_marginTop="20dp"
+            android:layout_width="40dp"
+            android:layout_weight="1.1"
+            android:layout_height="40dp"
+            android:alpha=".75"
+            android:background="@drawable/rep"
+            android:id="@+id/YapilacakBakimlarResim"/>
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_weight="1.1"
-        android:layout_height="100dp"
-
-        android:id="@+id/YapilacakBakimlarResim"
-        />
+</LinearLayout>
 
     <RelativeLayout
-        android:layout_width="120dp"
+        android:layout_width="0dp"
         android:layout_weight="3"
         android:orientation="vertical"
-        android:layout_margin="3dp"
-        android:layout_marginLeft="10dp"
+        android:layout_margin="4dp"
+        android:layout_marginLeft="12dp"
         android:layout_height="match_parent">
 
         <TextView
             android:layout_width="match_parent"
             android:text="baslik"
             android:textColor="#0F3057"
-            android:textSize="20dp"
+            android:textSize="16dp"
             android:layout_alignParentTop="true"
             android:layout_height="wrap_content"
             android:id="@+id/YapilacakBakimlarbaslik"/>
@@ -38,8 +43,7 @@
             android:layout_width="match_parent"
             android:text="binaadi"
             android:textColor="#0F3057"
-            android:textSize="20dp"
-
+            android:textSize="16dp"
             android:layout_below="@+id/YapilacakBakimlarbaslik"
             android:layout_height="wrap_content"
             android:id="@+id/YapilacakBakimlarbinaadi"/>
@@ -48,16 +52,23 @@
             android:layout_width="match_parent"
             android:text="yetkili"
             android:textColor="#0F3057"
-            android:textSize="16dp"
+            android:textSize="12dp"
             android:layout_below="@+id/YapilacakBakimlarbinaadi"
             android:layout_height="wrap_content"
             android:id="@+id/YapilacakBakimlaryetkili"/>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:id="@+id/arda"
+            android:layout_below="@+id/YapilacakBakimlaryetkili"
+            android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
             android:text="tel"
             android:textColor="#0F3057"
-            android:textSize="16dp"
-            android:layout_below="@+id/YapilacakBakimlaryetkili"
+            android:textSize="12dp"
+
             android:layout_height="wrap_content"
             android:id="@+id/YapilacakBakimlartel"/>
 
@@ -65,12 +76,31 @@
             android:layout_width="match_parent"
             android:text="donemtarihi"
             android:textColor="#0F3057"
-            android:textSize="15dp"
-            android:layout_alignParentBottom="true"
-            android:gravity="right|bottom"
-
+            android:layout_marginLeft="120dp"
+            android:textSize="12dp"
             android:layout_height="wrap_content"
             android:id="@+id/YapilacakBakimlardonemtarihi"/>
+
+        </RelativeLayout>
+        <TextView
+            android:layout_below="@+id/arda"
+            android:textColor="#8e44ad"
+            android:layout_width="match_parent"
+            android:layout_height="1dp" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="74dp"
+            android:background="#34495e" />
+
+
+
+
+
     </RelativeLayout>
 
+
+
 </LinearLayout>
+
