--- a/asansor/app/src/main/res/layout/activity_bekleyen_arizalar.xml
+++ b/asansor/app/src/main/res/layout/activity_bekleyen_arizalar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="#2c3e50"
     android:layout_height="match_parent"
     tools:context="com.example.ext.asansor.Activities.BekleyenArizalarActivity">
 
@@ -28,6 +29,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:id="@+id/bekleyenArizalarBugunButton"
+            android:background="@drawable/mybutton"
             android:text="Bugün"
             android:layout_height="wrap_content" />
         <Button
@@ -35,6 +37,7 @@
             android:layout_weight="1"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:background="@drawable/mybutton"
             android:id="@+id/bekleyenArizalarBuayButton"
             android:text="Bu Ay"
             android:layout_height="wrap_content" />
@@ -42,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_marginLeft="8dp"
+            android:background="@drawable/mybutton"
             android:layout_marginRight="8dp"
             android:id="@+id/bekleyenArizalarTumuButton"
             android:text="Tümü"
@@ -52,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Bekleyen Arizalar"
-        android:background="@color/colorPrimaryDark"
+        android:background="#34495e"
         android:textSize="20dp"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="10dp"
