--- a/asansor/app/src/main/res/layout/activity_yapilacak_bakimlar.xml
+++ b/asansor/app/src/main/res/layout/activity_yapilacak_bakimlar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#2c3e50"
     android:orientation="vertical"
     tools:context="com.example.ext.asansor.Activities.YapilacakBakimlarActivity">
 
@@ -25,7 +26,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/button_background"
+            android:background="@drawable/mybutton"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:id="@+id/yapilacakBakimlarBugunButton"
@@ -34,7 +35,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/button_background"
+            android:background="@drawable/mybutton"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:id="@+id/yapilacakBakimlarBuayButton"
@@ -43,7 +44,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_weight="1"
-            android:background="@drawable/button_background"
+            android:background="@drawable/mybutton"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:id="@+id/yapilacakBakimlarTumuButton"
@@ -55,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Yapılacak Bakımlar"
-        android:background="@color/colorPrimaryDark"
+        android:background="#34495e"
         android:textSize="20dp"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="10dp"
@@ -65,7 +66,7 @@
     <ListView
         android:layout_width="match_parent"
         android:id="@+id/yapilacakBakimlarListView"
-        android:background="#00587A"
+        android:background="#fff"
         android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
