netsiz kısım yeniden

--- a/asansor/app/src/main/res/layout/activity_tahsilat_yap_post.xml
+++ b/asansor/app/src/main/res/layout/activity_tahsilat_yap_post.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
     android:orientation="vertical"
-    tools:context=".TahsilatYapPostActivity">
+    tools:context=".Activities.TahsilatYapPostActivity">
 
 
     <TextView
