--- a/asansor/app/src/main/res/layout/activity_bakim_sec.xml
+++ b/asansor/app/src/main/res/layout/activity_bakim_sec.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/deneme"
     android:layout_height="match_parent"
     tools:context="com.example.ext.asansor.Activities.BakimSecActivity">
 
@@ -16,6 +17,7 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:text="QR Code"
+            android:background="@drawable/mybutton"
             android:id="@+id/QRCodeBakim"
             android:layout_marginBottom="40dp"/>
 
@@ -23,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
+            android:textColor="#fff"
             android:textSize="20dp"
             android:text="asansor id manual giris"/>
         <EditText
@@ -31,12 +34,13 @@
             android:layout_marginTop="12dp"
             android:id="@+id/manualgirisEditText"
             android:gravity="center"
-            android:background="@color/colorPrimaryDark"
+            android:textColor="#fff"
             android:hint="id"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:background="@drawable/mybutton"
             android:id="@+id/manualgirisOnayButton"
             android:text="Onay"/>
     </LinearLayout>
