--- a/asansor/app/src/main/res/layout/activity_tahsilat_yap.xml
+++ b/asansor/app/src/main/res/layout/activity_tahsilat_yap.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.ext.asansor.TahsilatYapActivity">
+    tools:context="com.example.ext.asansor.Activities.TahsilatYapActivity">
 
     <TextView
         android:layout_width="match_parent"
