--- a/asansor/app/src/main/res/layout/activity_ariza.xml
+++ b/asansor/app/src/main/res/layout/activity_ariza.xml
@@ -4,52 +4,171 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ArizaActivity"
+    tools:context=".Activities.ArizaActivity"
     android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Bakim Ekrani"
+        android:id="@+id/arizaEkrani"
+        android:textSize="20dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:gravity="center"/>
 
     <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Ariza Ekrani"
-    android:textSize="20dp"
-    android:layout_marginBottom="15dp"
-    android:layout_marginTop="10dp"
-    android:textStyle="bold"
-    android:gravity="center"/>
-
-    <EditText
-        android:id="@+id/BinaAdiEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="bina adi gir"/>
+        android:hint="baslik"
+        android:layout_below="@id/arizaEkrani"
+        android:id="@+id/baslikAriza"
+        android:textSize="28dp"/>
 
-    <EditText
-        android:id="@+id/ArizaTuruEditText"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="ariza turu gir"/>
-
-
-    <EditText
-        android:id="@+id/AcıklamaEditText"
+        android:hint="binaadi"
+        android:id="@+id/binaadiAriza"
+        android:layout_below="@id/baslikAriza"
+        android:textSize="28dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="aciklama gir"/>
-
-    <Button
-        android:id="@+id/OnayButon"
+        android:id="@+id/seciliArizaAriza"
+        android:hint="Seçili arıza: Tarih"
+        android:layout_below="@id/binaadiAriza"
+        android:textSize="20dp"/>
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/ic_launcher_background"
-        android:text="Onay"/>
+        android:id="@+id/ArizaEkraniScrool"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:text="Bina Yetkilisi"/>
+            <EditText
+                android:id="@+id/binayetkiliEditText"
+                android:layout_width="280dp"
+                android:shadowColor="@color/colorPrimaryDark"
+                android:background="#fff"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="40dp"
+                android:textColorHint="@color/colorPrimaryDark"/>
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#fff"
+                android:text="Arıza Sebebi"/>
+            <EditText
+                android:id="@+id/ArizaSebebiEditText"
+                android:layout_width="280dp"
+                android:shadowColor="@color/colorPrimaryDark"
+                android:background="#fff"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="40dp"
+                android:textColorHint="@color/colorPrimaryDark"/>
 
-    <EditText
-        android:layout_marginTop="10dp"
-        android:id="@+id/kontrolEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="kontrol"/>
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Arıza Kodu"/>
+            <EditText
+                android:id="@+id/ArızaKoduEditText"
+                android:layout_width="280dp"
+                android:shadowColor="@color/colorPrimaryDark"
+                android:background="#fff"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="40dp"
+                android:textColorHint="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Değişen Parçalar"/>
+            <EditText
+                android:id="@+id/DegisenParcalar"
+                android:layout_width="280dp"
+                android:shadowColor="@color/colorPrimaryDark"
+                android:background="#fff"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="40dp"
+                android:textColorHint="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Tel"/>
+            <EditText
+                android:id="@+id/TelEditText"
+                android:layout_width="280dp"
+                android:shadowColor="@color/colorPrimaryDark"
+                android:background="#fff"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="40dp"
+
+                android:textColorHint="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="E-posta"/>
+            <EditText
+                android:id="@+id/EpostaEditText"
+                android:layout_width="280dp"
+                android:shadowColor="@color/colorPrimaryDark"
+                android:background="#fff"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="40dp"
+
+                android:textColorHint="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Mesaj"/>
+            <EditText
+                android:id="@+id/MesajEditText"
+                android:layout_width="280dp"
+                android:shadowColor="@color/colorPrimaryDark"
+                android:background="#fff"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="40dp"
+                android:hint="Mesajınız"
+                android:textColorHint="@color/colorPrimaryDark"/>
+
+
+
+            <Button
+                android:id="@+id/OnayButon"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/mybutton"
+                android:text="Onay"/>
+
+
+
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
